[package]
name = "antics-with-semantics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd-tree = "0.5.1"
rust-bert = "0.20.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
typenum = "1.16.0"
csv = "1.1"